<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>de.textmining</groupId>
		<artifactId>nerdle</artifactId>
		<version>v0.3.0-SNAPSHOT</version>
	</parent>
	<artifactId>nerdle-core</artifactId>
	<name>nerdle-core</name>

	<dependencies>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>16.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- apache commons -->

		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.6</version>
		</dependency>

		<!-- clearnlp -->

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp</artifactId>
			<version>2.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-dictionary</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-dep</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-pos</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-srl</artifactId>
			<version>1.1</version>
		</dependency>

		<!-- H2 -->

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.185</version>
		</dependency>

		<dependency>
			<groupId>fm.void.jetm</groupId>
			<artifactId>jetm</artifactId>
			<version>1.2.3</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx4g -XX:+UseConcMarkSweepGC</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<id>WithDependencies</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>
								${project.build.directory}/${project.artifactId}-${project.version}-withDependencies.jar
							</outputFile>
						</configuration>
					</execution>
					<execution>
						<id>Dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<excludes>
									<exclude>classworlds:classworlds</exclude>
									<exclude>de.textmining:nerdle</exclude>
									<exclude>de.textmining:nerdle-core</exclude>
								</excludes>
							</artifactSet>
							<outputFile>
								${project.build.directory}/${project.artifactId}-${project.version}-dependencies.jar
							</outputFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>